--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/74e355dfe5.js" crossorigin="anonymous"></script>
     <title>football</title>
     <link rel="stylesheet" href="style.css">
 </head>
